--- a/stone_farm/scss/partials/_header.scss
+++ b/stone_farm/scss/partials/_header.scss
@@ -13,3 +13,7 @@ header{
 .x-breadcrumb-wrap a, .x-breadcrumbs .delimiter{
 	color:$sc_blue!important;
 }
+
+.x-navbar .desktop .sub-menu a{
+	color:$sc_blue!important;
+}
