--- a/stone_farm/scss/partials/_variables.scss
+++ b/stone_farm/scss/partials/_variables.scss
@@ -3,5 +3,6 @@ $white : #ffffff;
 $sc_blue : #2d333a;
 $footer_link_color: #696969;
 
-//Fonts
+//Typography
 $base-font-size : 18px!important;
+$base-line-height : 2.2!important;
