--- a/stone_farm/scss/style.scss
+++ b/stone_farm/scss/style.scss
@@ -21,3 +21,4 @@ Template: x
 @import "partials/woocommerce";
 @import "partials/buttons";
 @import "partials/footer";
+@import "partials/interiors";
