--- a/stone_farm/scss/partials/_buttons.scss
+++ b/stone_farm/scss/partials/_buttons.scss
@@ -4,3 +4,12 @@
 	padding: 0.5em;
 	text-align: center;
 }
+.cta_dark{
+	color: #fff;
+    border-color: #000;
+    background-color: #2d333a;
+    margin-bottom: 0.25em;
+    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+    border-radius: 0.25em;
+}
