--- a/stone_farm/scss/partials/_variables.scss
+++ b/stone_farm/scss/partials/_variables.scss
@@ -2,6 +2,8 @@
 $white : #ffffff;
 $sc_blue : #2d333a;
 $footer_link_color: #696969;
+$dk_grey : #888888;
+$med_grey : #C0C0C0;
 
 //Typography
 $base-font-size : 18px!important;
