--- a/stone_farm/scss/partials/_buttons.scss
+++ b/stone_farm/scss/partials/_buttons.scss
@@ -13,3 +13,33 @@
     box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
     border-radius: 0.25em;
 }
+#cs-content{
+	.x-btn, .button, [type="submit"] {
+	    color: #fff;
+	    border-color: #000!important;
+	    background-color: #2d333a!important;
+	    margin-bottom: 0.25em;
+	    text-shadow: 0 0.075em 0.075em rgba(0,0,0,0.5);
+	    box-shadow:none!important;
+	    border-radius: 0.25em;
+	    &:hover{
+	    	background-color: #bababa!important;
+	    }
+	}
+
+	.x-btn, .button, [type="submit"] {
+	    display: inline-block;
+	    position: relative;
+	    border: 1px solid #000!important;
+	    padding: 0.563em 1.125em 0.813em;
+	    cursor: pointer;
+	    font-size: 16px;
+	    font-weight: inherit;
+	    line-height: 1.3;
+	    text-align: center;
+	    vertical-align: middle;
+	    color: #fff;
+	    background-color: #ff2a13;
+	    transition: all 0.15s linear;
+	}
+}
