--- a/stone_farm/scss/partials/_global.scss
+++ b/stone_farm/scss/partials/_global.scss
@@ -13,13 +13,39 @@ body{
 //Set classes on column containing image
 .img_50-50_left{
   @include img_half;
+  .x-text-headline{
+  	position:  absolute;
+    top: 30%;
+    right:  0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4)!important;
+    h2{
+    	margin: 0!important;
+    	line-height: 2!important;
+    }
+  }
 }
 .img_50-50_right{
   @include img_half;
+  .x-text-headline{
+  	position:  absolute;
+    top: 30%;
+    right:  0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4)!important;
+    h2{
+    	margin: 0!important;
+    	line-height: 2!important;
+    }
+  }
 }
 
 //Typography
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'Playfair Display', serif!important;
     font-style: normal;
     font-weight: 300;
