--- a/stone_farm/style.css
+++ b/stone_farm/style.css
@@ -44,8 +44,23 @@ body {
     opacity: 1.0;
   }
 }
+/* line 16, scss/partials/_global.scss */
+.img_50-50_left .x-text-headline {
+  position: absolute;
+  top: 30%;
+  right: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4) !important;
+}
+/* line 24, scss/partials/_global.scss */
+.img_50-50_left .x-text-headline h2 {
+  margin: 0 !important;
+  line-height: 2 !important;
+}
 
-/* line 17, scss/partials/_global.scss */
+/* line 30, scss/partials/_global.scss */
 .img_50-50_right {
   margin: 0px;
   width: 100%;
@@ -58,36 +73,51 @@ body {
   opacity: 0;
 }
 @media all and (max-width: 900px) {
-  /* line 17, scss/partials/_global.scss */
+  /* line 30, scss/partials/_global.scss */
   .img_50-50_right {
     opacity: 1.0;
   }
 }
+/* line 32, scss/partials/_global.scss */
+.img_50-50_right .x-text-headline {
+  position: absolute;
+  top: 30%;
+  right: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4) !important;
+}
+/* line 40, scss/partials/_global.scss */
+.img_50-50_right .x-text-headline h2 {
+  margin: 0 !important;
+  line-height: 2 !important;
+}
 
-/* line 22, scss/partials/_global.scss */
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+/* line 48, scss/partials/_global.scss */
+h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Playfair Display", serif !important;
   font-style: normal;
   font-weight: 300;
   text-transform: uppercase;
 }
 
-/* line 28, scss/partials/_global.scss */
+/* line 54, scss/partials/_global.scss */
 p {
   font-size: 18px !important;
   line-height: 2.2 !important;
 }
 
-/* line 32, scss/partials/_global.scss */
+/* line 58, scss/partials/_global.scss */
 .el77.x-text {
   font-size: 18px !important;
 }
 
-/* line 35, scss/partials/_global.scss */
+/* line 61, scss/partials/_global.scss */
 .white_txt {
   color: #ffffff !important;
 }
-/* line 37, scss/partials/_global.scss */
+/* line 63, scss/partials/_global.scss */
 .white_txt h1, .white_txt h2, .white_txt h3, .white_txt h4, .white_txt h5, .white_txt h6, .white_txt .h1, .white_txt .h2, .white_txt .h3, .white_txt .h4, .white_txt .h5, .white_txt .h6 {
   color: #ffffff !important;
 }
@@ -282,6 +312,37 @@ h3.color_title {
   border-radius: 0.25em;
 }
 
+/* line 17, scss/partials/_buttons.scss */
+#cs-content .x-btn, #cs-content .button, #cs-content [type="submit"] {
+  color: #fff;
+  border-color: #000 !important;
+  background-color: #2d333a !important;
+  margin-bottom: 0.25em;
+  text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+  box-shadow: none !important;
+  border-radius: 0.25em;
+}
+/* line 25, scss/partials/_buttons.scss */
+#cs-content .x-btn:hover, #cs-content .button:hover, #cs-content [type="submit"]:hover {
+  background-color: #bababa !important;
+}
+/* line 30, scss/partials/_buttons.scss */
+#cs-content .x-btn, #cs-content .button, #cs-content [type="submit"] {
+  display: inline-block;
+  position: relative;
+  border: 1px solid #000 !important;
+  padding: 0.563em 1.125em 0.813em;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: inherit;
+  line-height: 1.3;
+  text-align: center;
+  vertical-align: middle;
+  color: #fff;
+  background-color: #ff2a13;
+  transition: all 0.15s linear;
+}
+
 /* line 1, scss/partials/_footer.scss */
 footer {
   color: #696969;
@@ -289,6 +350,11 @@ footer {
 /* line 3, scss/partials/_footer.scss */
 footer a {
   color: #696969;
+}
+
+/* line 7, scss/partials/_footer.scss */
+.x-colophon.top {
+  padding: 0% 0 5.25%;
 }
 
 /* line 1, scss/partials/_interiors.scss */
@@ -308,4 +374,59 @@ footer a {
   .slider_50 {
     opacity: 1.0;
   }
+}
+
+/* line 6, scss/partials/_interiors.scss */
+.specifications {
+  width: 70%;
+  margin-top: 2em !important;
+  display: block;
+}
+@media all and (max-width: 900px) {
+  /* line 6, scss/partials/_interiors.scss */
+  .specifications {
+    width: 100%;
+  }
+}
+/* line 13, scss/partials/_interiors.scss */
+.specifications h3 {
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  font-size: 2.0em;
+  width: 100%;
+  border-bottom: 1px solid #888888;
+  margin-bottom: 0.75em;
+}
+/* line 21, scss/partials/_interiors.scss */
+.specifications p {
+  font-size: 0.75em;
+}
+/* line 24, scss/partials/_interiors.scss */
+.specifications .spec_row {
+  display: block;
+  width: 100%;
+  padding: 0 1.0em;
+}
+/* line 16, scss/partials/_mixins.scss */
+.specifications .spec_row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 30, scss/partials/_interiors.scss */
+.specifications hr {
+  border-bottom: 1px solid #C0C0C0;
+}
+/* line 33, scss/partials/_interiors.scss */
+.specifications .label {
+  display: inline-block;
+  float: left;
+  width: 45%;
+}
+/* line 38, scss/partials/_interiors.scss */
+.specifications .spec_val {
+  display: inline-block;
+  float: right;
+  width: 45%;
+  text-align: right;
 }
