--- a/stone_farm/scss/partials/_variables.scss
+++ b/stone_farm/scss/partials/_variables.scss
@@ -1,10 +1,16 @@
 //Colors
 $white : #ffffff;
 $sc_blue : #2d333a;
+$sc_lt_grey : #a9b3c1;
 $footer_link_color: #696969;
 $dk_grey : #888888;
 $med_grey : #C0C0C0;
+$b_a-arrow_white : rgba(255, 255, 255, 0.8);
 
 //Typography
 $base-font-size : 18px!important;
 $base-line-height : 2.2!important;
+
+//Fonts
+$main-header : 'Playfair Display', serif!important;
+$main-body : "Lato", sans-serif;
