--- a/stone_farm/scss/style.scss
+++ b/stone_farm/scss/style.scss
@@ -22,3 +22,5 @@ Template: x
 @import "partials/buttons";
 @import "partials/footer";
 @import "partials/interiors";
+@import "partials/forms";
+@import "partials/about_us";
