--- a/stone_farm/style.css
+++ b/stone_farm/style.css
@@ -15,18 +15,23 @@ body {
   font-size: 18px !important;
 }
 
-/* line 5, scss/partials/_global.scss */
+/* line 4, scss/partials/_global.scss */
+a {
+  transition: all 0.15s linear;
+}
+
+/* line 8, scss/partials/_global.scss */
 .x-image img {
   width: 100% !important;
 }
 
-/* line 9, scss/partials/_global.scss */
+/* line 12, scss/partials/_global.scss */
 .x-navbar {
   background-color: #2d333a;
   opacity: 0.8;
 }
 
-/* line 14, scss/partials/_global.scss */
+/* line 17, scss/partials/_global.scss */
 .img_50-50_left {
   margin: 0px;
   width: 100%;
@@ -39,12 +44,12 @@ body {
   opacity: 0;
 }
 @media all and (max-width: 900px) {
-  /* line 14, scss/partials/_global.scss */
+  /* line 17, scss/partials/_global.scss */
   .img_50-50_left {
     opacity: 1.0;
   }
 }
-/* line 16, scss/partials/_global.scss */
+/* line 19, scss/partials/_global.scss */
 .img_50-50_left .x-text-headline {
   position: absolute;
   top: 30%;
@@ -54,13 +59,13 @@ body {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.4) !important;
 }
-/* line 24, scss/partials/_global.scss */
+/* line 27, scss/partials/_global.scss */
 .img_50-50_left .x-text-headline h2 {
   margin: 0 !important;
   line-height: 2 !important;
 }
 
-/* line 30, scss/partials/_global.scss */
+/* line 33, scss/partials/_global.scss */
 .img_50-50_right {
   margin: 0px;
   width: 100%;
@@ -73,12 +78,12 @@ body {
   opacity: 0;
 }
 @media all and (max-width: 900px) {
-  /* line 30, scss/partials/_global.scss */
+  /* line 33, scss/partials/_global.scss */
   .img_50-50_right {
     opacity: 1.0;
   }
 }
-/* line 32, scss/partials/_global.scss */
+/* line 35, scss/partials/_global.scss */
 .img_50-50_right .x-text-headline {
   position: absolute;
   top: 30%;
@@ -88,13 +93,13 @@ body {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.4) !important;
 }
-/* line 40, scss/partials/_global.scss */
+/* line 43, scss/partials/_global.scss */
 .img_50-50_right .x-text-headline h2 {
   margin: 0 !important;
   line-height: 2 !important;
 }
 
-/* line 48, scss/partials/_global.scss */
+/* line 51, scss/partials/_global.scss */
 h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Playfair Display", serif !important;
   font-style: normal;
@@ -102,24 +107,99 @@ h1, h2, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   text-transform: uppercase;
 }
 
-/* line 54, scss/partials/_global.scss */
+/* line 57, scss/partials/_global.scss */
 p {
   font-size: 18px !important;
   line-height: 2.2 !important;
 }
 
-/* line 58, scss/partials/_global.scss */
+/* line 61, scss/partials/_global.scss */
 .el77.x-text {
   font-size: 18px !important;
 }
 
-/* line 61, scss/partials/_global.scss */
+/* line 64, scss/partials/_global.scss */
 .white_txt {
   color: #ffffff !important;
 }
-/* line 63, scss/partials/_global.scss */
+/* line 66, scss/partials/_global.scss */
 .white_txt h1, .white_txt h2, .white_txt h3, .white_txt h4, .white_txt h5, .white_txt h6, .white_txt .h1, .white_txt .h2, .white_txt .h3, .white_txt .h4, .white_txt .h5, .white_txt .h6 {
   color: #ffffff !important;
+}
+
+/* line 71, scss/partials/_global.scss */
+body.blog .x-slider-container.below {
+  border-bottom: 5px solid #2d333a !important;
+}
+
+/* line 87, scss/partials/_global.scss */
+.right_half_circle {
+  background: transparent;
+  height: 12em;
+  width: 6em;
+  border-bottom-right-radius: 12em;
+  border-top-right-radius: 12em;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  z-index: 555;
+  opacity: 0.5;
+  border-top: rgba(255, 255, 255, 0.8) 5px solid;
+  border-right: rgba(255, 255, 255, 0.8) 5px solid;
+  border-bottom: rgba(255, 255, 255, 0.8) 5px solid;
+}
+
+/* line 103, scss/partials/_global.scss */
+.left_half_circle {
+  background: transparent;
+  height: 12em;
+  width: 6em;
+  border-bottom-left-radius: 12em;
+  border-top-left-radius: 12em;
+  position: absolute;
+  top: 45%;
+  right: 0;
+  z-index: 555;
+  opacity: 0.5;
+  border-top: rgba(255, 255, 255, 0.8) 5px solid;
+  border-left: rgba(255, 255, 255, 0.8) 5px solid;
+  border-bottom: rgba(255, 255, 255, 0.8) 5px solid;
+}
+
+/* line 119, scss/partials/_global.scss */
+.right_arrow {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  border: solid white;
+  border-width: 0 8px 8px 0;
+  display: inline-block;
+  padding: 20px;
+  z-index: 555;
+  margin-top: 4em;
+  margin-left: -6px;
+}
+
+/* line 131, scss/partials/_global.scss */
+.left_arrow {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  border: solid white;
+  border-width: 0 8px 8px 0;
+  display: inline-block;
+  padding: 20px;
+  z-index: 555;
+  margin-top: 4em;
+  margin-left: 37px;
+}
+
+/* line 143, scss/partials/_global.scss */
+.el67.x-frame {
+  width: 100%;
+  max-width: 100% !important;
+  font-size: 16px;
+  background-color: #ffffff;
+  max-height: 400px;
+  overflow: hidden;
 }
 
 /* line 1, scss/partials/_home.scss */
@@ -237,24 +317,24 @@ h3.color_title {
   text-shadow: 2px 2px 2px black;
 }
 
-/* line 2, scss/partials/_woocommerce.scss */
-.woocommerce ul.products {
+/* line 3, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products {
   max-width: 50%;
 }
-/* line 5, scss/partials/_woocommerce.scss */
-.woocommerce ul.products li div.entry-featured {
+/* line 6, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products li div.entry-featured {
   display: inline-block;
   float: left;
 }
-/* line 9, scss/partials/_woocommerce.scss */
-.woocommerce ul.products li div.entry-wrap {
+/* line 10, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products li div.entry-wrap {
   display: inline-block;
   float: left;
   box-shadow: none;
   width: 100%;
 }
-/* line 16, scss/partials/_woocommerce.scss */
-.woocommerce ul.products li.product {
+/* line 17, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products li.product {
   float: left;
   overflow: hidden;
   position: relative;
@@ -264,8 +344,8 @@ h3.color_title {
   border-radius: 4px;
   box-shadow: 0 0.15em 0.35em 0 rgba(0, 0, 0, 0.135);
 }
-/* line 26, scss/partials/_woocommerce.scss */
-.woocommerce ul.products li.product .entry-header .button {
+/* line 27, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products li.product .entry-header .button {
   position: relative !important;
   top: 0 !important;
   left: 0;
@@ -276,9 +356,23 @@ h3.color_title {
   font-size: 14px;
   opacity: 1 !important;
 }
+/* line 42, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products .x-btn, .color_row .woocommerce ul.products .button, .color_row .woocommerce ul.products [type="submit"] {
+  color: #fff;
+  border-color: #000;
+  background-color: #2d333a;
+  margin-bottom: 0.25em;
+  text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+  border-radius: 0.25em;
+}
+/* line 51, scss/partials/_woocommerce.scss */
+.color_row .woocommerce ul.products li div.entry-featured {
+  display: none;
+}
 
-/* line 44, scss/partials/_woocommerce.scss */
-.woocommerce ul.products .x-btn, .woocommerce ul.products .button, .woocommerce ul.products [type="submit"] {
+/* line 57, scss/partials/_woocommerce.scss */
+.cart [type="submit"] {
   color: #fff;
   border-color: #000;
   background-color: #2d333a;
@@ -288,9 +382,26 @@ h3.color_title {
   border-radius: 0.25em;
 }
 
-/* line 53, scss/partials/_woocommerce.scss */
-.woocommerce ul.products li div.entry-featured {
-  display: none;
+/* line 68, scss/partials/_woocommerce.scss */
+.entry-product a.button {
+  color: #fff;
+  border-color: #000;
+  background-color: #2d333a;
+  margin-bottom: 0.25em;
+  text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+  border-radius: 0.25em;
+}
+
+/* line 79, scss/partials/_woocommerce.scss */
+.x-btn, .button, [type="submit"] {
+  color: #fff !important;
+  border-color: #000 !important;
+  background-color: #2d333a !important;
+  margin-bottom: 0.25em !important;
+  text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5) !important;
+  box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75) !important;
+  border-radius: 0.25em !important;
 }
 
 /* line 1, scss/partials/_buttons.scss */
@@ -429,4 +540,96 @@ footer a {
   float: right;
   width: 45%;
   text-align: right;
+}
+
+/* line 47, scss/partials/_interiors.scss */
+.ff_finds_txt .white_txt {
+  padding: 1em 2em !important;
+}
+/* line 49, scss/partials/_interiors.scss */
+.ff_finds_txt .white_txt h4 {
+  margin-top: 1.0em;
+  font-style: italic;
+  font-size: 1.2em;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  line-height: 2.8;
+}
+
+/* line 60, scss/partials/_interiors.scss */
+.stone_buyer a {
+  color: #a9b3c1;
+}
+/* line 62, scss/partials/_interiors.scss */
+.stone_buyer a:hover {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* line 1, scss/partials/_forms.scss */
+.x-off-canvas-content {
+  padding-left: 1em !important;
+}
+/* line 3, scss/partials/_forms.scss */
+.x-off-canvas-content > div {
+  padding: 0 !important;
+}
+
+/* line 7, scss/partials/_forms.scss */
+form.jotform-form {
+  font-family: "Lato", sans-serif !important;
+}
+/* line 10, scss/partials/_forms.scss */
+form.jotform-form div.form-all ul.form-section {
+  list-style-type: none !important;
+  margin: 0 0 1.313em 0 !important;
+}
+/* line 15, scss/partials/_forms.scss */
+form.jotform-form div.form-all ul.form-section .form-input-wide div.form-buttons-wrapper [type="submit"] {
+  color: #fff;
+  border-color: #000 !important;
+  background-color: #2d333a !important;
+  margin-bottom: 0.25em;
+  text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+  box-shadow: none !important;
+  border-radius: 0.25em;
+}
+/* line 23, scss/partials/_forms.scss */
+form.jotform-form div.form-all ul.form-section .form-input-wide div.form-buttons-wrapper [type="submit"]:hover {
+  background-color: #bababa !important;
+}
+
+/* line 33, scss/partials/_forms.scss */
+h3.off_canvas_title {
+  margin-top: 0 !important;
+  font-family: "Playfair Display", serif !important;
+}
+
+/* line 37, scss/partials/_forms.scss */
+.x-off-canvas-content {
+  max-width: 30em !important;
+}
+
+/* line 1, scss/partials/_about_us.scss */
+.logo_block {
+  border-top: 3px solid #a9b3c1;
+}
+
+/* line 5, scss/partials/_about_us.scss */
+.contact_content a {
+  color: #2d333a !important;
+}
+/* line 7, scss/partials/_about_us.scss */
+.contact_content a:hover {
+  color: #a9b3c1 !important;
+}
+/* line 11, scss/partials/_about_us.scss */
+.contact_content span.contact_address {
+  display: block;
+  line-height: 1.5;
+}
+/* line 15, scss/partials/_about_us.scss */
+.contact_content h3 {
+  font-family: "Playfair Display", serif !important;
+  font-size: 2em;
+  margin-bottom: 1.0em;
 }
