--- a/stone_farm/scss/partials/_interiors.scss
+++ b/stone_farm/scss/partials/_interiors.scss
@@ -11,7 +11,7 @@
     width:100%;
   }
   h3{
-    font-family: "Lato", sans-serif;
+    font-family: $main-body;
     font-weight: 500;
     font-size: 2.0em;
     width:100%;
@@ -40,5 +40,27 @@
     float:right;
     width:45%;
     text-align: right;
+  }
+}
+
+.ff_finds_txt{
+  .white_txt{
+    padding:1.0em 2.0em!important;
+    h4{
+      margin-top: 1.0em;
+      font-style: italic;
+      font-size: 1.2em;
+      border-top: 1px solid $white;
+      border-bottom: 1px solid $white;
+      line-height: 2.8;
+    }
+  }
+}
+.stone_buyer{
+  a{
+    color:$sc_lt_grey;
+    &:hover{
+      color:$b_a-arrow_white;
+    }
   }
 }
