--- a/stone_farm/scss/partials/_woocommerce.scss
+++ b/stone_farm/scss/partials/_woocommerce.scss
@@ -1,55 +1,87 @@
-.woocommerce{
-	ul.products{
-		max-width: 50%;
-		li{
-			div.entry-featured{
-				display: inline-block;
-				float:left;
+.color_row{
+	.woocommerce{
+		ul.products{
+			max-width: 50%;
+			li{
+				div.entry-featured{
+					display: inline-block;
+					float:left;
+				}
+				div.entry-wrap{
+					display: inline-block;
+					float: left;
+					box-shadow: none;
+					width:100%;
+				}
 			}
-			div.entry-wrap{
-				display: inline-block;
-				float: left;
-				box-shadow: none;
-				width:100%;
+			li.product {
+			    float: left;
+			    overflow: hidden;
+			    position: relative;
+			    margin: 0 4% 4.5% 0;
+			    padding: .75em!important;
+			    background-color: #fff;
+			    border-radius: 4px;
+			    box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
+			}
+			li.product .entry-header .button {
+			    position: relative!important;
+			    top: 0!important;
+			    left: 0;
+			    right: 0;
+			    margin: 2.5% 0 0!important;
+			    padding: 0.45em 0.5em 0.575em;
+			    display: block;
+			    font-size: 14px;
+			    opacity: 1!important;
 			}
 		}
-		li.product {
-		    float: left;
-		    overflow: hidden;
-		    position: relative;
-		    margin: 0 4% 4.5% 0;
-		    padding: .75em!important;
-		    background-color: #fff;
-		    border-radius: 4px;
-		    box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
-		}
-		li.product .entry-header .button {
-		    position: relative!important;
-		    top: 0!important;
-		    left: 0;
-		    right: 0;
-		    margin: 2.5% 0 0!important;
-		    padding: 0.45em 0.5em 0.575em;
-		    display: block;
-		    font-size: 14px;
-		    opacity: 1!important;
-		}
+
+	} //End WooCommerce Wrapper
+
+	.woocommerce ul.products .x-btn, .woocommerce ul.products .button, .woocommerce ul.products [type="submit"] {
+	    color: #fff;
+	    border-color: #000;
+	    background-color: #2d333a;
+	    margin-bottom: 0.25em;
+	    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+	    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+	    border-radius: 0.25em;
 	}
-
-
-
-
-} //End WooCommerce Wrapper
-
-.woocommerce ul.products .x-btn, .woocommerce ul.products .button, .woocommerce ul.products [type="submit"] {
-    color: #fff;
-    border-color: #000;
-    background-color: #2d333a;
-    margin-bottom: 0.25em;
-    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
-    border-radius: 0.25em;
+	.woocommerce ul.products li div.entry-featured {
+	    display: none;
+	}
 }
-.woocommerce ul.products li div.entry-featured {
-    display: none;
+
+.cart{
+	[type="submit"]{
+		color: #fff;
+	    border-color: #000;
+	    background-color: #2d333a;
+	    margin-bottom: 0.25em;
+	    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+	    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+	    border-radius: 0.25em;
+	}
+}
+.entry-product{
+	a.button{
+		color: #fff;
+	    border-color: #000;
+	    background-color: #2d333a;
+	    margin-bottom: 0.25em;
+	    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5);
+	    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75);
+	    border-radius: 0.25em;
+	}
+}
+
+.x-btn, .button, [type="submit"] {
+    color: #fff!important;
+    border-color: #000!important;
+    background-color: #2d333a!important;
+    margin-bottom: 0.25em!important;
+    text-shadow: 0 0.075em 0.075em rgba(0, 0, 0, 0.5)!important;
+    box-shadow: 0 0.25em 0 0 #000, 0 4px 9px rgba(0, 0, 0, 0.75)!important;
+    border-radius: 0.25em!important;
 }
