Pre Bug List #1 Commit

--- a/stone_farm/scss/partials/_header.scss
+++ b/stone_farm/scss/partials/_header.scss
@@ -17,3 +17,9 @@ header{
 .x-navbar .desktop .sub-menu a{
 	color:$sc_blue!important;
 }
+.x-nav>.right {
+    float: right;
+     @media all and (max-width: 1375px) {
+     	float: none;
+     }
+}
