--- a/stone_farm/scss/partials/_global.scss
+++ b/stone_farm/scss/partials/_global.scss
@@ -66,6 +66,10 @@ p{
 	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 		color:$white!important;
 	}
+  hr{
+    color: $white;
+    border-color:$white;
+  }
 }
 body.blog{
   .x-slider-container.below {
