--- a/stone_farm/scss/partials/_interiors.scss
+++ b/stone_farm/scss/partials/_interiors.scss
@@ -1,5 +1,14 @@
 .slider_50{
   @include img_half;
+  padding:0!important;
+  @media all and (max-width: 1120px) {
+    vertical-align: middle!important;
+    padding:0!important;
+  }
+}
+
+.center_image{
+  vertical-align: middle!important;
 }
 
 //Reclaimed Cobbles
@@ -63,4 +72,8 @@
       color:$b_a-arrow_white;
     }
   }
+}
+
+.full_image_col{
+  @include img_half;
 }
