--- a/stone_farm/scss/style.scss
+++ b/stone_farm/scss/style.scss
@@ -24,3 +24,4 @@ Template: x
 @import "partials/interiors";
 @import "partials/forms";
 @import "partials/about_us";
+@import "partials/inspiration";
